src/objects/TPA_RequestDocument__c.object
<CustomObject>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TPA_Request_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Request Id</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipLabel>TPA_RequestDocument</relationshipLabel>
        <relationshipName>TPA_RequestDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TPA_RequestDocument</label>
    <nameField>
        <label>TPA_RequestDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPA_RequestDocument</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>